Stanford Events Importer x.x-x.x, xxxx-xx-xx
--------------------------------------------

Stanford Events Importer 7.x-3.0-alpha1, 2014-03-11
--------------------------------------------------
- Features 2.x Compatible feature
- New Views
- New sub feature modules
- Clead up node edit form
