@@ -2,7 +2,7 @@ name = Stanford Events Views
 description = Default views for Stanford events
 core = 7.x
 package = Stanford
-version = 7.x-2.0-alpha2
+version = 7.x-2.0-alpha7
 project = stanford_events_views
 dependencies[] = calendar
 dependencies[] = stanford_date_formats
