@@ -240,8 +240,7 @@ function stanford_events_importer_field_default_field_instances() {
     'bundle' => 'stanford_event',
     'default_value' => NULL,
     'deleted' => 0,
-    'description' => 'This content is imported from events.stanford.edu.
-',
+    'description' => 'This content is imported from events.stanford.edu.',
     'display' => array(
       'default' => array(
         'label' => 'above',
@@ -324,7 +323,7 @@ function stanford_events_importer_field_default_field_instances() {
         'label' => 'hidden',
         'module' => 'date',
         'settings' => array(
-          'format_type' => 'stanford_event',
+          'format_type' => 'stanford_date_year_time',
           'fromto' => 'both',
           'multiple_from' => '',
           'multiple_number' => '',
@@ -346,7 +345,7 @@ function stanford_events_importer_field_default_field_instances() {
     'required' => 0,
     'settings' => array(
       'default_value' => 'now',
-      'default_value2' => 'same',
+      'default_value2' => 'blank',
       'default_value_code' => '',
       'default_value_code2' => '',
       'user_register_form' => FALSE,
@@ -356,7 +355,7 @@ function stanford_events_importer_field_default_field_instances() {
       'module' => 'date',
       'settings' => array(
         'display_all_day' => 1,
-        'increment' => 1,
+        'increment' => 5,
         'input_format' => 'custom',
         'input_format_custom' => 'Y-m-d g:i:sA',
         'label_position' => 'above',
@@ -445,7 +444,7 @@ function stanford_events_importer_field_default_field_instances() {
         'module' => 'image',
         'settings' => array(
           'image_link' => '',
-          'image_style' => '',
+          'image_style' => 'large-scaled',
         ),
         'type' => 'image',
         'weight' => 1,
@@ -766,8 +765,6 @@ function stanford_events_importer_field_default_field_instances() {
   t('Location');
   t('More Information');
   t('This content is imported from events.stanford.edu.');
-  t('This content is imported from events.stanford.edu.
-');
   t('This filtered text field is event description (e.g., this event is etc. etc.).');
   t('This formatted text field is for the event admission information (e.g., Free and open to the public).');
   t('This link field will add a link Title and URL to location(s) that is external to your site (e.g. Stanford University, http://www.stanford.edu).');
