@@ -42,6 +42,21 @@ function stanford_events_importer_requirements($phase) {
       }
       break;
 
+      // Ensure that stanford_date_formats module is enabled before updating.
+      if (!module_exists('stanford_date_formats')) {
+        // Be nice and try to enable it for the user.
+        if (!module_enable(array('stanford_date_formats'))) {
+          // Still no dice. Throw out requirement.
+          $requirements['stanford_date_formats_enabled'] = array(
+            'title' => 'Stanford Date Formats Module Required',
+            'value' => 'Not installed',
+            'description' => 'The Stanford Date Formats module is required for version 3.x of the Stanford Events Importer module.',
+            'severity' => REQUIREMENT_ERROR,
+          );
+        }
+      }
+      break;
+
     default:
   }
 
@@ -240,6 +255,9 @@ function stanford_events_importer_schema() {
  */
 function stanford_events_importer_update_7100(&$sandbox) {
   // Legacy Placeholder
+  if (!module_exists('stanford_date_formats')) {
+    module_enable(array('stanford_date_formats'));
+  }
   return;
 }
 
@@ -251,6 +269,18 @@ function stanford_events_importer_update_7200(&$sandbox) {
 
   // Get helper functions and utilities.
   module_load_include('php', 'stanford_events_importer', 'inc/stanford_events_importer.util.inc');
+
+  // check for new dependencies.
+  $path = drupal_get_path('module', 'stanford_events_importer') . '/stanford_events_importer.info';
+  $info = drupal_parse_info_file($path);
+
+  foreach ($info['dependencies'] as $dependency) {
+    $parsed = drupal_parse_dependency($dependency);
+    if (!module_exists($parsed['name'])) {
+      throw new DrupalUpdateException('Missing dependency: ' . $parsed['name'] . ". Please enable it to continue with upgrades.");
+      return;
+    }
+  }
 
   // First batch of updates. Schema checks and such.
   $success = stanford_events_importer_update_7200a();
@@ -341,31 +371,69 @@ function stanford_events_importer_update_7200a() {
 
 
 /**
- * Update all existing stanford_event nodes' datetime field to roll back 8 hours
- * due to the change in timezone handling on the field. With the datetime field
- * this update will only work with MYSQL databases. Contact sheamck@stanford.edu
+ * Update all existing stanford_event nodes' datetime field to go from UTC to
+ * the sites timezone. With the datetime field this update will only work with
+ * MYSQL databases. Contact sheamck@stanford.edu
  * if you have another database type.
  * @return bool
  *   success or not.
  */
 function stanford_events_importer_update_7200b() {
 
-  // We have to db MYSQL for this to work. Sorry other guys.
-  $type = db_driver();
-  if ($type !== "mysql") {
-    $msg = t('Could not update existing stanford_event nodes. Database connection must be mysql.');
-    drupal_set_message($msg, 'error');
-    watchdog('stanford_events_importer', $msg, array(), WATCHDOG_ERROR);
-    return FALSE;
+  // Get the offset from UTC
+  $ntz = timezone_offset_get(new DateTimeZone(variable_get('date_default_timezone', @date_default_timezone_get())), new DateTime());
+  // hours
+  $ntzh = $ntz / 3600;
+  // reverse thinking
+  $ntzh *= -1;
+
+  $utc = new DateTimeZone("UTC");
+  $ntz = new DateTimeZone(variable_get('date_default_timezone', @date_default_timezone_get()));
+
+  // Cannot seem to get a single query to work. Falling back to loops :(
+  $data_results = db_select('field_data_field_stanford_event_datetime', 'fdfd')
+    ->fields('fdfd', array('entity_id', 'revision_id','field_stanford_event_datetime_value', 'field_stanford_event_datetime_value2'))
+    ->execute()
+    ->fetchAllAssoc('entity_id');
+
+  foreach ($data_results as $k => $v) {
+    $entity_id = $v->entity_id;
+    $revision_id = $v->revision_id;
+    $original_time = $v->field_stanford_event_datetime_value;
+    $original_time2 = $v->field_stanford_event_datetime_value2;
+
+    $new_time = new DateTime($original_time, $utc);
+    $new_time2 = new DateTime($original_time2, $utc);
+
+    if ($ntzh > 0) {
+      $new_time->add(new DateInterval('PT' . $ntzh . 'H'));
+      $new_time2->add(new DateInterval('PT' . $ntzh . 'H'));
+    }
+    else {
+      $ntzh *= -1;
+      $new_time->sub(new DateInterval('PT' . $ntzh . 'H'));
+      $new_time2->sub(new DateInterval('PT' . $ntzh . 'H'));
+    }
+
+    $new_time_value = $new_time->format('Y-m-d H:i:s');
+    $new_time_value2 = $new_time2->format('Y-m-d H:i:s');
+
+    db_update('field_data_field_stanford_event_datetime')
+      ->fields(array(
+        'field_stanford_event_datetime_value' => $new_time_value,
+        'field_stanford_event_datetime_value2' => $new_time_value2,
+      ))
+      ->condition('revision_id', $revision_id)
+      ->execute();
+
+    db_update('field_revision_field_stanford_event_datetime')
+      ->fields(array(
+        'field_stanford_event_datetime_value' => $new_time_value,
+        'field_stanford_event_datetime_value2' => $new_time_value2,
+      ))
+      ->condition('revision_id', $revision_id)
+      ->execute();
   }
-
-  // Update the data field first.
-  $result = db_query("UPDATE {field_data_field_stanford_event_datetime} SET `field_stanford_event_datetime_value` = (SELECT DATE_SUB(field_stanford_event_datetime_value, INTERVAL 8 HOUR)) WHERE `bundle` = 'stanford_event'")
-            ->execute();
-
-  // Update the revisions field.
-  $result = db_query("UPDATE {field_revision_field_stanford_event_datetime} SET `field_stanford_event_datetime_value` = (SELECT DATE_SUB(field_stanford_event_datetime_value, INTERVAL 8 HOUR)) WHERE `bundle` = 'stanford_event'")
-            ->execute();
 
   return TRUE;
 }
@@ -498,5 +566,27 @@ function stanford_events_importer_update_7201(&$sandbox) {
       ->execute();
   }
 
+}
 
+/**
+ * Update from 2.x -> 3.x features
+ */
+function stanford_events_importer_update_7300(&$sandbox) {
+  // Programically revert the feature so the user doesnt have to.
+  features_revert(
+    array(
+      'stanford_events_importer' => array(
+        'field_base',
+        'field_instance',
+        'ctools',
+        'feeds_importer',
+        'feeds_tamper',
+        'node',
+        'variable',
+        'field_group',
+        'taxonomy',
+        'variable',
+      )
+    )
+  );
 }
